--- a/index.html
+++ b/index.html
@@ -74,15 +74,17 @@
 
 <div class="card" id="card">
   <h1>
-    Savita 💖<br>
-    Will you be my Valentine?
-  </h1>
+  Hey Savita 💖<br>
+  Will you be my Valentine?
+</h1>
 
   <div class="buttons">
     <button id="yes" onclick="yesClicked()">Yes 😍</button>
   </div>
 
-  <button id="no" ontouchstart="moveNo()" onmouseover="moveNo()">No 🙈</button>
+  <button id="no" ontouchstart="moveNo()" onmouseover="moveNo()">No 🙈</button><p style="margin-top:25px; font-size:14px; color:#777; text-align:center;">
+  — Girish 💖
+</p>
 </div>
 
 <script>
