--- a/savi.html
+++ b/savi.html
@@ -1,1 +1,124 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hey Savita 💖</title>
 
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #ffd1dc, #ff9ebc);
+      font-family: 'Poppins', Arial, sans-serif;
+    }
+
+    .card {
+      background: #fff;
+      padding: 30px 20px;
+      border-radius: 20px;
+      text-align: center;
+      width: 90%;
+      max-width: 360px;
+      box-shadow: 0 15px 40px rgba(0,0,0,0.15);
+      position: relative;
+    }
+
+    .cat-img {
+      width: 120px;
+      border-radius: 50%;
+      margin-bottom: 15px;
+      box-shadow: 0 8px 20px rgba(255,105,180,0.4);
+    }
+
+    h1 {
+      font-size: 22px;
+      margin-bottom: 20px;
+    }
+
+    .buttons {
+      position: relative;
+      height: 90px;
+    }
+
+    button {
+      padding: 12px 22px;
+      font-size: 16px;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      position: absolute;
+      transition: 0.2s;
+    }
+
+    #yes {
+      background: #ff4f8b;
+      color: white;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    #no {
+      background: #ddd;
+      color: #333;
+      top: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 14px;
+      padding: 10px 18px;
+    }
+
+    .celebrate {
+      font-size: 18px;
+      margin-top: 20px;
+      display: none;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="card" id="card">
+    <img src="cat.png.PNG" class="cat-img" alt="Cute anime cat">
+
+    <h1>
+      Hey Savita 💖<br>
+      Will you be my Valentine?
+    </h1>
+
+    <div class="buttons">
+      <button id="yes" onclick="yesClicked()">Yes 😍</button>
+      <button id="no" onmouseover="moveNo()" ontouchstart="moveNo()">No 🙈</button>
+    </div>
+
+    <div class="celebrate" id="celebrate">
+      🎉😹 BOOM! You’re officially my Valentine! 💖<br><br>
+      I knew the cat would convince you 😼<br><br>
+      – Girish
+    </div>
+  </div>
+
+  <script>
+    function moveNo() {
+      const noBtn = document.getElementById("no");
+      const card = document.getElementById("card");
+
+      const maxX = card.clientWidth - noBtn.offsetWidth - 10;
+      const maxY = card.clientHeight - noBtn.offsetHeight - 10;
+
+      const x = Math.random() * maxX;
+      const y = Math.random() * maxY;
+
+      noBtn.style.left = x + "px";
+      noBtn.style.top = y + "px";
+    }
+
+    function yesClicked() {
+      document.querySelector(".buttons").style.display = "none";
+      document.getElementById("celebrate").style.display = "block";
+    }
+  </script>
+</body>
+</html>
