--- a/savi.html
+++ b/savi.html
@@ -1,124 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hey Savita 💖</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Hey Savita 💖</title>
 
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #ffd1dc, #ff9ebc);
-      font-family: 'Poppins', Arial, sans-serif;
-    }
+<style>
+  * {
+    box-sizing: border-box;
+  }
 
-    .card {
-      background: #fff;
-      padding: 30px 20px;
-      border-radius: 20px;
-      text-align: center;
-      width: 90%;
-      max-width: 360px;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.15);
-      position: relative;
-    }
+  body {
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(135deg, #ff7aa2, #ffd1dc);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Poppins', Arial, sans-serif;
+  }
 
-    .cat-img {
-      width: 120px;
-      border-radius: 50%;
-      margin-bottom: 15px;
-      box-shadow: 0 8px 20px rgba(255,105,180,0.4);
-    }
+  .card {
+    background: white;
+    width: 90%;
+    max-width: 420px;
+    padding: 24px;
+    border-radius: 22px;
+    text-align: center;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    position: relative;
+    overflow: hidden;
+  }
 
-    h1 {
-      font-size: 22px;
-      margin-bottom: 20px;
-    }
+  .cat {
+    width: 100%;
+    max-width: 260px;
+    margin: 0 auto 16px;
+    display: block;
+  }
 
-    .buttons {
-      position: relative;
-      height: 90px;
-    }
+  h1 {
+    font-size: 22px;
+    margin: 10px 0 18px;
+    color: #333;
+  }
 
-    button {
-      padding: 12px 22px;
-      font-size: 16px;
-      border: none;
-      border-radius: 25px;
-      cursor: pointer;
-      position: absolute;
-      transition: 0.2s;
-    }
+  .signature {
+    margin-top: 14px;
+    font-size: 16px;
+    color: #777;
+  }
 
-    #yes {
-      background: #ff4f8b;
-      color: white;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+  .buttons {
+    margin-top: 20px;
+    position: relative;
+    height: 80px;
+  }
 
-    #no {
-      background: #ddd;
-      color: #333;
-      top: 50px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 14px;
-      padding: 10px 18px;
-    }
+  button {
+    border: none;
+    padding: 14px 28px;
+    font-size: 16px;
+    border-radius: 30px;
+    cursor: pointer;
+    position: absolute;
+  }
 
-    .celebrate {
-      font-size: 18px;
-      margin-top: 20px;
-      display: none;
-    }
-  </style>
+  #yes {
+    background: #ff4f7a;
+    color: white;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  #no {
+    background: #ddd;
+    color: #333;
+    font-size: 14px;
+  }
+
+  .celebrate {
+    display: none;
+    text-align: center;
+  }
+
+  .celebrate h2 {
+    color: white;
+    font-size: 28px;
+  }
+
+  .celebrate p {
+    color: white;
+    font-size: 18px;
+    margin-top: 12px;
+  }
+</style>
 </head>
 
 <body>
-  <div class="card" id="card">
-    <img src="cat.png.PNG" class="cat-img" alt="Cute anime cat">
 
-    <h1>
-      Hey Savita 💖<br>
-      Will you be my Valentine?
-    </h1>
+<div class="card" id="card">
+  <img src="cat.png.PNG" alt="Cute Cat" class="cat">
 
-    <div class="buttons">
-      <button id="yes" onclick="yesClicked()">Yes 😍</button>
-      <button id="no" onmouseover="moveNo()" ontouchstart="moveNo()">No 🙈</button>
-    </div>
+  <h1>Hey Savita 💖<br>Will you be my Valentine?</h1>
 
-    <div class="celebrate" id="celebrate">
-      🎉😹 BOOM! You’re officially my Valentine! 💖<br><br>
-      I knew the cat would convince you 😼<br><br>
-      – Girish
-    </div>
+  <div class="buttons">
+    <button id="yes" onclick="yesClicked()">Yes 😍</button>
+    <button id="no" ontouchstart="moveNo()" onmouseover="moveNo()">No 🙈</button>
   </div>
 
-  <script>
-    function moveNo() {
-      const noBtn = document.getElementById("no");
-      const card = document.getElementById("card");
+  <div class="signature">— Girish 💖</div>
+</div>
 
-      const maxX = card.clientWidth - noBtn.offsetWidth - 10;
-      const maxY = card.clientHeight - noBtn.offsetHeight - 10;
+<div class="celebrate" id="celebrate">
+  <h2>Yayyyyy! 🥰💘</h2>
+  <p>
+    Savita, you’re officially my Valentine ❤️<br><br>
+    I *knew* the cat would convince you 😌🐱
+  </p>
+</div>
 
-      const x = Math.random() * maxX;
-      const y = Math.random() * maxY;
+<script>
+  function moveNo() {
+    const noBtn = document.getElementById("no");
+    const card = document.getElementById("card");
 
-      noBtn.style.left = x + "px";
-      noBtn.style.top = y + "px";
-    }
+    const maxX = card.clientWidth - noBtn.offsetWidth - 20;
+    const maxY = card.clientHeight - noBtn.offsetHeight - 20;
 
-    function yesClicked() {
-      document.querySelector(".buttons").style.display = "none";
-      document.getElementById("celebrate").style.display = "block";
-    }
-  </script>
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
+
+    noBtn.style.left = x + "px";
+    noBtn.style.top = y + "px";
+  }
+
+  function yesClicked() {
+    document.body.innerHTML = `
+      <div style="
+        height:100vh;
+        background: linear-gradient(135deg, #ff7aa2, #ffd1dc);
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        text-align:center;
+        font-family:Poppins, Arial;
+      ">
+        <h1 style="color:white;font-size:32px;">Yayyyyy! 🥰💘</h1>
+        <p style="color:white;font-size:20px;max-width:300px;">
+          Savita, you just made my day ❤️<br><br>
+          You’re officially my Valentine 💖<br><br>
+          I knew the cat would convince you 😌🐱
+        </p>
+      </div>
+    `;
+  }
+</script>
+
 </body>
 </html>
