--- a/index.html
+++ b/index.html
@@ -1,1 +1,162 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Hey Savita 💖</title>
 
+<style>
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(135deg, #ff7aa2, #ffd1dc);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Poppins', Arial, sans-serif;
+  }
+
+  .card {
+    background: white;
+    width: 90%;
+    max-width: 420px;
+    padding: 24px;
+    border-radius: 22px;
+    text-align: center;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    position: relative;
+    overflow: hidden;
+  }
+
+  .cat {
+    width: 100%;
+    max-width: 260px;
+    margin: 0 auto 16px;
+    display: block;
+  }
+
+  h1 {
+    font-size: 22px;
+    margin: 10px 0 18px;
+    color: #333;
+  }
+
+  .signature {
+    margin-top: 14px;
+    font-size: 16px;
+    color: #777;
+  }
+
+  .buttons {
+    margin-top: 20px;
+    position: relative;
+    height: 80px;
+  }
+
+  button {
+    border: none;
+    padding: 14px 28px;
+    font-size: 16px;
+    border-radius: 30px;
+    cursor: pointer;
+    position: absolute;
+  }
+
+  #yes {
+    background: #ff4f7a;
+    color: white;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  #no {
+    background: #ddd;
+    color: #333;
+    font-size: 14px;
+  }
+
+  .celebrate {
+    display: none;
+    text-align: center;
+  }
+
+  .celebrate h2 {
+    color: white;
+    font-size: 28px;
+  }
+
+  .celebrate p {
+    color: white;
+    font-size: 18px;
+    margin-top: 12px;
+  }
+</style>
+</head>
+
+<body>
+
+<div class="card" id="card">
+  <img src="cat.png.PNG" alt="Cute Cat" class="cat">
+
+  <h1>Hey Savita 💖<br>Will you be my Valentine?</h1>
+
+  <div class="buttons">
+    <button id="yes" onclick="yesClicked()">Yes 😍</button>
+    <button id="no" ontouchstart="moveNo()" onmouseover="moveNo()">No 🙈</button>
+  </div>
+
+  <div class="signature">— Girish 💖</div>
+</div>
+
+<div class="celebrate" id="celebrate">
+  <h2>Yayyyyy! 🥰💘</h2>
+  <p>
+    Savita, you’re officially my Valentine ❤️<br><br>
+    I *knew* the cat would convince you 😌🐱
+  </p>
+</div>
+
+<script>
+  function moveNo() {
+    const noBtn = document.getElementById("no");
+    const card = document.getElementById("card");
+
+    const maxX = card.clientWidth - noBtn.offsetWidth - 20;
+    const maxY = card.clientHeight - noBtn.offsetHeight - 20;
+
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
+
+    noBtn.style.left = x + "px";
+    noBtn.style.top = y + "px";
+  }
+
+  function yesClicked() {
+    document.body.innerHTML = `
+      <div style="
+        height:100vh;
+        background: linear-gradient(135deg, #ff7aa2, #ffd1dc);
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        text-align:center;
+        font-family:Poppins, Arial;
+      ">
+        <h1 style="color:white;font-size:32px;">Yayyyyy! 🥰💘</h1>
+        <p style="color:white;font-size:20px;max-width:300px;">
+          Savita, you just made my day ❤️<br><br>
+          You’re officially my Valentine 💖<br><br>
+          I knew the cat would convince you 😌🐱
+        </p>
+      </div>
+    `;
+  }
+</script>
+
+</body>
+</html>
