--- a/index.html
+++ b/index.html
@@ -1,74 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Hey Savita 💖</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>For Savita 💖</title>
 
 <style>
   * {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   }
 
   body {
     margin: 0;
     height: 100vh;
-    background: linear-gradient(135deg, #ff7aa2, #ffd1dc);
+    background: linear-gradient(135deg, #ff9ebc, #ffd1dc);
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-family: 'Poppins', Arial, sans-serif;
-  }
-
-  .card {
-    background: white;
-    width: 90%;
-    max-width: 420px;
-    padding: 24px;
-    border-radius: 22px;
-    text-align: center;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-    position: relative;
+    align-items: center;
     overflow: hidden;
   }
 
-  .cat {
-    width: 100%;
-    max-width: 260px;
-    margin: 0 auto 16px;
-    display: block;
-  }
-
-  h1 {
-    font-size: 22px;
-    margin: 10px 0 18px;
-    color: #333;
-  }
-
-  .signature {
-    margin-top: 14px;
-    font-size: 16px;
-    color: #777;
-  }
-
-  .buttons {
-    margin-top: 20px;
+  /* CARD */
+  .card {
+    background: white;
+    width: 90%;
+    max-width: 360px;
+    padding: 20px;
+    border-radius: 22px;
+    text-align: center;
     position: relative;
-    height: 80px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+  }
+
+  .card img {
+    width: 100%;
+    border-radius: 18px;
+    margin-bottom: 12px;
+  }
+
+  /* BUTTON AREA */
+  .buttons {
+    position: relative;
+    height: 120px;
+    margin-top: 10px;
   }
 
   button {
     border: none;
-    padding: 14px 28px;
-    font-size: 16px;
     border-radius: 30px;
+    padding: 14px 26px;
     cursor: pointer;
     position: absolute;
   }
 
   #yes {
-    background: #ff4f7a;
+    background: #ff4f7b;
     color: white;
+    font-size: 18px;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -77,84 +66,87 @@
     background: #ddd;
     color: #333;
     font-size: 14px;
+    position: absolute;
   }
 
-  .celebrate {
+  .from {
+    margin-top: 18px;
+    font-size: 14px;
+    color: #777;
+  }
+
+  /* YES SCREEN */
+  .yes-screen {
+    position: fixed;
+    inset: 0;
+    background: linear-gradient(135deg, #ff7aa2, #ffb6c9);
     display: none;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    color: white;
+    padding: 20px;
+    z-index: 100;
   }
 
-  .celebrate h2 {
-    color: white;
-    font-size: 28px;
+  .yes-screen h2 {
+    font-size: 34px;
+    margin-bottom: 15px;
   }
 
-  .celebrate p {
-    color: white;
-    font-size: 18px;
-    margin-top: 12px;
+  .yes-screen p {
+    font-size: 22px;
+    line-height: 1.5;
   }
 </style>
 </head>
 
 <body>
 
+<!-- FIRST SCREEN -->
 <div class="card" id="card">
-  <img src="cat.png.PNG" alt="Cute Cat" class="cat">
-
-  <h1>Hey Savita 💖<br>Will you be my Valentine?</h1>
+  <img src="cat.png.PNG" alt="Anime Cat">
 
   <div class="buttons">
     <button id="yes" onclick="yesClicked()">Yes 😍</button>
-    <button id="no" ontouchstart="moveNo()" onmouseover="moveNo()">No 🙈</button>
+    <button id="no" onmouseover="moveNo()" ontouchstart="moveNo()">No 🙈</button>
   </div>
 
-  <div class="signature">— Girish 💖</div>
+  <div class="from">— Girish 💖</div>
 </div>
 
-<div class="celebrate" id="celebrate">
-  <h2>Yayyyyy! 🥰💘</h2>
-  <p>
-    Savita, you’re officially my Valentine ❤️<br><br>
-    I *knew* the cat would convince you 😌🐱
-  </p>
+<!-- YES CELEBRATION SCREEN -->
+<div class="yes-screen" id="yesScreen">
+  <div>
+    <h2>BOOM! 🎉💖</h2>
+    <p>
+      You’re officially my Valentine 😍<br><br>
+      I knew the cat would convince you 😼
+    </p>
+  </div>
 </div>
 
 <script>
   function moveNo() {
-    const noBtn = document.getElementById("no");
+    const no = document.getElementById("no");
     const card = document.getElementById("card");
 
-    const maxX = card.clientWidth - noBtn.offsetWidth - 20;
-    const maxY = card.clientHeight - noBtn.offsetHeight - 20;
+    const padding = 20;
+    const maxX = card.clientWidth - no.offsetWidth - padding;
+    const maxY = card.clientHeight - no.offsetHeight - padding;
 
+    // Keep it teasing near YES (upper area)
     const x = Math.random() * maxX;
-    const y = Math.random() * maxY;
+    const y = Math.random() * (maxY * 0.6);
 
-    noBtn.style.left = x + "px";
-    noBtn.style.top = y + "px";
+    no.style.transition = "all 0.25s ease";
+    no.style.left = x + "px";
+    no.style.top = y + "px";
   }
 
   function yesClicked() {
-    document.body.innerHTML = `
-      <div style="
-        height:100vh;
-        background: linear-gradient(135deg, #ff7aa2, #ffd1dc);
-        display:flex;
-        flex-direction:column;
-        align-items:center;
-        justify-content:center;
-        text-align:center;
-        font-family:Poppins, Arial;
-      ">
-        <h1 style="color:white;font-size:32px;">Yayyyyy! 🥰💘</h1>
-        <p style="color:white;font-size:20px;max-width:300px;">
-          Savita, you just made my day ❤️<br><br>
-          You’re officially my Valentine 💖<br><br>
-          I knew the cat would convince you 😌🐱
-        </p>
-      </div>
-    `;
+    document.getElementById("card").style.display = "none";
+    document.getElementById("yesScreen").style.display = "flex";
   }
 </script>
 
