--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     overflow: hidden;
   }
 
-  /* CARD */
   .card {
     background: white;
     width: 90%;
@@ -36,10 +35,9 @@
   .card img {
     width: 100%;
     border-radius: 18px;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
   }
 
-  /* BUTTON AREA */
   .buttons {
     position: relative;
     height: 120px;
@@ -66,7 +64,8 @@
     background: #ddd;
     color: #333;
     font-size: 14px;
-    position: absolute;
+    left: 10px;   /* STARTS ON SIDE */
+    top: 60px;
   }
 
   .from {
@@ -75,7 +74,6 @@
     color: #777;
   }
 
-  /* YES SCREEN */
   .yes-screen {
     position: fixed;
     inset: 0;
@@ -103,7 +101,6 @@
 
 <body>
 
-<!-- FIRST SCREEN -->
 <div class="card" id="card">
   <img src="cat.png.PNG" alt="Anime Cat">
 
@@ -115,7 +112,6 @@
   <div class="from">— Girish 💖</div>
 </div>
 
-<!-- YES CELEBRATION SCREEN -->
 <div class="yes-screen" id="yesScreen">
   <div>
     <h2>BOOM! 🎉💖</h2>
@@ -127,17 +123,33 @@
 </div>
 
 <script>
+  let noCount = 0;
+
   function moveNo() {
     const no = document.getElementById("no");
     const card = document.getElementById("card");
+    const yes = document.getElementById("yes");
+
+    noCount++;
 
     const padding = 20;
     const maxX = card.clientWidth - no.offsetWidth - padding;
     const maxY = card.clientHeight - no.offsetHeight - padding;
 
-    // Keep it teasing near YES (upper area)
-    const x = Math.random() * maxX;
-    const y = Math.random() * (maxY * 0.6);
+    let x, y;
+
+    if (noCount < 6) {
+      // First 5 times → stay on sides / around
+      x = Math.random() < 0.5 ? 10 : maxX;
+      y = Math.random() * (maxY * 0.7) + 40;
+    } else {
+      // After 5–6 tries → jump above YES
+      const yesRect = yes.getBoundingClientRect();
+      const cardRect = card.getBoundingClientRect();
+
+      x = yesRect.left - cardRect.left;
+      y = yesRect.top - cardRect.top - 45;
+    }
 
     no.style.transition = "all 0.25s ease";
     no.style.left = x + "px";
